# reuse/code/services/api/healthcareProvider.service.ts
@@ -11,6 +11,8 @@ export class HealthcareProviderService {
     disciplines: string[],
     institutionTypes?: string[],
     providerType: ProviderType = ProviderType.All,
+    prescriptionId?: string,
+    intent?: string,
     page?: number,
     pageSize?: number
   ) {
@@ -21,6 +23,8 @@ export class HealthcareProviderService {
       providerType,
       disciplines ?? undefined,
       institutionTypes ?? undefined,
+      prescriptionId,
+      intent,
       page,
       pageSize
     );
